--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             padding: 0;
             box-sizing: border-box;
             color: #333;
+            background-color: #f5f5f5;
         }
         .container {
             width: 90%;
@@ -20,7 +21,7 @@
             overflow: hidden;
         }
         header {
-            background: #34495e;
+            background: #2c3e50;
             color: #fff;
             padding-top: 30px;
             min-height: 70px;
@@ -51,7 +52,7 @@
             margin-top: 10px;
         }
         #banner {
-            background: #2c3e50;
+            background: #34495e;
             color: #fff;
             text-align: center;
             padding: 50px 0;
@@ -64,7 +65,7 @@
         }
         .card {
             background: #ecf0f1;
-            color: #34495e;
+            color: #2c3e50;
             padding: 20px;
             width: 30%;
             margin: 10px 0;
@@ -84,17 +85,17 @@
         .card p {
             display: none;
             margin-top: 10px;
+            text-align: justify;
         }
         .card:hover p, .card.active p {
             display: block;
-            text-align: justify;
         }
         section {
             padding: 20px;
             margin: 20px 0;
         }
         footer {
-            background: #34495e;
+            background: #2c3e50;
             color: #fff;
             text-align: center;
             padding: 10px;
